# python-template

./: .gitignore  LICENSE  README.md  cookiecutter.json  py.bat
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  pyproject.toml  pytest.ini  requirements.txt
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: clean_cache.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/services/: user_service.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/utils/: __init__.py  file_utils.py  test_utils.py  time_utils.py
{{ cookiecutter.project_slug }}/tests/: conftest.py
{{ cookiecutter.project_slug }}/tests/test/: hello.py  init.py  test_fixtures.py  test_main.py  test_mark.py  test_parametrize.py
